// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard component should render correctly default 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Unknown>,
      false,
      <Unknown
        action="next"
        isDisabled={false}
        onClick={[Function]}
        variant="primary"
      >
        Next
      </Unknown>,
    ]
  }
  appendTo={<body />}
  ariaDescribedById=""
  className="ins-c-wizard"
  content={
    Array [
      <div
        id="first"
      >
        First
      </div>,
      <div
        id="second"
      >
        Second
      </div>,
      <div
        id="third"
      >
        Third
      </div>,
      <div
        id="fourth"
      >
        Fourth
      </div>,
    ]
  }
  hideTitle={false}
  isFooterLeftAligned={false}
  isLarge={false}
  isOpen={true}
  isSmall={false}
  onClose={[Function]}
  onKeyPress={[Function]}
  showClose={true}
  title="Some title"
>
  <div
    id="first"
  >
    First
  </div>
</Modal>
`;

exports[`Wizard component should render correctly large 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Unknown>,
      false,
      <Unknown
        action="next"
        isDisabled={false}
        onClick={[Function]}
        variant="primary"
      >
        Next
      </Unknown>,
    ]
  }
  appendTo={<body />}
  ariaDescribedById=""
  className="ins-c-wizard"
  content={
    Array [
      <div
        id="first"
      >
        First
      </div>,
      <div
        id="second"
      >
        Second
      </div>,
      <div
        id="third"
      >
        Third
      </div>,
      <div
        id="fourth"
      >
        Fourth
      </div>,
    ]
  }
  hideTitle={false}
  isFooterLeftAligned={false}
  isLarge={true}
  isOpen={true}
  isSmall={false}
  onClose={[Function]}
  onKeyPress={[Function]}
  showClose={true}
  title="Some title"
>
  <div
    id="first"
  >
    First
  </div>
</Modal>
`;

exports[`Wizard component should render correctly one page 1`] = `
<Modal
  actions={
    Array [
      <Unknown
        action="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Unknown>,
      false,
      <Unknown
        action="confirm"
        isDisabled={false}
        onClick={[Function]}
        variant="primary"
      >
        Confirm
      </Unknown>,
    ]
  }
  appendTo={<body />}
  ariaDescribedById=""
  className="ins-c-wizard"
  content={
    Array [
      <div>
        One
      </div>,
    ]
  }
  hideTitle={false}
  isFooterLeftAligned={false}
  isLarge={false}
  isOpen={true}
  isSmall={false}
  onClose={[Function]}
  onKeyPress={[Function]}
  showClose={true}
  title="Some title"
>
  <div>
    One
  </div>
</Modal>
`;
